syntax = "proto3";

import "google/protobuf/timestamp.proto";

// buf:lint:ignore PACKAGE_DIRECTORY_MATCH
package common.v1;

option go_package = "./grpc/v1";

message User {
  string id = 1;
  string email = 2;
  string username = 3;
  string full_name = 4;
  optional string avatar_url = 5;
  optional string bio = 6;
  optional google.protobuf.Timestamp last_login_at = 7;
  google.protobuf.Timestamp created_at = 8;
  optional google.protobuf.Timestamp updated_at = 9;
}