syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "common.proto";

// buf:lint:ignore PACKAGE_DIRECTORY_MATCH
package users.v1;

option go_package = "./grpc/v1";

service UsersService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string full_name = 3;
}
message RegisterResponse {
  string access_token = 1;
  common.v1.User user = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}
message LoginResponse {
  string access_token = 1;
  common.v1.User user = 2;
}

message LogoutRequest {}
message LogoutResponse {}

message GetUserRequest {
  string requesterID = 1;
  string username = 2;
}
message GetUserResponse {
  common.v1.User user = 1;
  optional string common_chat_id = 2;
}
